2007-05-29  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/tool/pingger/pingger.rb: New option. -n, -u, --force

	* donrails/app/controllers/notes_controller.rb (NotesController::catch_ping): Fix for wrong content-type return.
	(NotesController::catch_trackback): likewise.

2007-05-27  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/tool/pingger/pingger.rb: New file. It is Proxy ping module.

	* upgrade_1_7.mysql.sql: New file.

	* donrails/app/controllers/admin/system_controller.rb (Admin::add_don_env): Add ping_async entry.
	* donrails/app/views/admin/shared/edit_don_env.rhtml: likewise.
	* donrails/app/models/article.rb (Article::send_pings2): Add for don_get_config.ping_async.

2007-05-25  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* Now we can 'rake test' at off-line.
	* donrails/lib/akismet.rb (Akismet::call_akismet): When donrails does not use Akismet, return @reasonString.
	* donrails/test/functional/notes_controller_test.rb (NotesControllerTest): Change to test this.

2007-05-19  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/application.rb (ApplicationController::don_is_spam): Add 'Akismet' timeout error handling.

2007-05-10  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/integration/cache_test.rb (CacheTest::test_caching_fix_article): New test.

	* donrails/app/models/article_sweeper.rb (ArticleSweeper): Fix to use for clear cache function.
	
	* donrails/lib/akismet.rb (Akismet::call_akismet): When Akismet host down or name resolution error, all messages are not blocked.

2007-05-09  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/admin/article_controller.rb (Admin): Fix to run cache_sweeper when use preview_article_confirm.

	* donrails/lib/akismet.rb (Akismet::call_akismet): Add timeout (5 seconds)

	* donrails/test/integration/login_story_test.rb (LoginStoryTest::test_login): Cleanup.

	* donrails/config/routes.rb: Add for parameter interpretaion miss for fcgi?

2007-05-06  ARAKI Yasuhiro  <yasu@debian.or.jp>
